docs/apache-airflow-providers-google/14.0.0/_sources/_api/airflow/providers/google/cloud/links/vertex_ai/index.rst.txt
airflow.providers.google.cloud.links.vertex_ai
==============================================

.. py:module:: airflow.providers.google.cloud.links.vertex_ai


Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_BASE_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_MODEL_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_MODEL_LIST_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_MODEL_EXPORT_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_TRAINING_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_TRAINING_PIPELINES_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_DATASET_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_DATASET_LIST_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_HYPERPARAMETER_TUNING_JOB_LIST_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_BATCH_PREDICTION_JOB_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_BATCH_PREDICTION_JOB_LIST_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_ENDPOINT_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_ENDPOINT_LIST_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_PIPELINE_JOB_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_PIPELINE_JOB_LIST_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.links.vertex_ai.VertexAIModelLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIModelListLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIModelExportLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAITrainingLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAITrainingPipelinesLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIDatasetLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIDatasetListLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIHyperparameterTuningJobListLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIBatchPredictionJobLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIBatchPredictionJobListLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIEndpointLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIEndpointListLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIPipelineJobLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIPipelineJobListLink


Module Contents
---------------

.. py:data:: VERTEX_AI_BASE_LINK
   :value: '/vertex-ai'


.. py:data:: VERTEX_AI_MODEL_LINK
   :value: '/vertex-ai/models/locations/{region}/models/{model_id}/versions/default/properties?project={project_id}'


.. py:data:: VERTEX_AI_MODEL_LIST_LINK
   :value: '/vertex-ai/models?project={project_id}'


.. py:data:: VERTEX_AI_MODEL_EXPORT_LINK
   :value: '/storage/browser/{bucket_name}/model-{model_id}?project={project_id}'


.. py:data:: VERTEX_AI_TRAINING_LINK
   :value: '/vertex-ai/locations/{region}/training/{training_id}/cpu?project={project_id}'


.. py:data:: VERTEX_AI_TRAINING_PIPELINES_LINK
   :value: '/vertex-ai/training/training-pipelines?project={project_id}'


.. py:data:: VERTEX_AI_DATASET_LINK
   :value: '/vertex-ai/locations/{region}/datasets/{dataset_id}/analyze?project={project_id}'


.. py:data:: VERTEX_AI_DATASET_LIST_LINK
   :value: '/vertex-ai/datasets?project={project_id}'


.. py:data:: VERTEX_AI_HYPERPARAMETER_TUNING_JOB_LIST_LINK
   :value: '/vertex-ai/training/hyperparameter-tuning-jobs?project={project_id}'


.. py:data:: VERTEX_AI_BATCH_PREDICTION_JOB_LINK
   :value: '/vertex-ai/locations/{region}/batch-predictions/{batch_prediction_job_id}?project={project_id}'


.. py:data:: VERTEX_AI_BATCH_PREDICTION_JOB_LIST_LINK
   :value: '/vertex-ai/batch-predictions?project={project_id}'


.. py:data:: VERTEX_AI_ENDPOINT_LINK
   :value: '/vertex-ai/locations/{region}/endpoints/{endpoint_id}?project={project_id}'


.. py:data:: VERTEX_AI_ENDPOINT_LIST_LINK
   :value: '/vertex-ai/endpoints?project={project_id}'


.. py:data:: VERTEX_AI_PIPELINE_JOB_LINK
   :value: '/vertex-ai/locations/{region}/pipelines/runs/{pipeline_id}?project={project_id}'


.. py:data:: VERTEX_AI_PIPELINE_JOB_LIST_LINK
   :value: '/vertex-ai/pipelines/runs?project={project_id}'


.. py:class:: VertexAIModelLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI Model link.


   .. py:attribute:: name
      :value: 'Vertex AI Model'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'model_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/models/locations/{region}/models/{model_id}/versions/default/properties?project={project_id}'



   .. py:method:: persist(context, task_instance, model_id)
      :staticmethod:



.. py:class:: VertexAIModelListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI Models Link.


   .. py:attribute:: name
      :value: 'Model List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'models_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/models?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: VertexAIModelExportLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI Model Export Link.


   .. py:attribute:: name
      :value: 'Export Model'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'export_conf'



   .. py:attribute:: format_str
      :value: '/storage/browser/{bucket_name}/model-{model_id}?project={project_id}'



   .. py:method:: extract_bucket_name(config)
      :staticmethod:


      Return bucket name from output configuration.



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: VertexAITrainingLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI Training link.


   .. py:attribute:: name
      :value: 'Vertex AI Training'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'training_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/locations/{region}/training/{training_id}/cpu?project={project_id}'



   .. py:method:: persist(context, task_instance, training_id)
      :staticmethod:



.. py:class:: VertexAITrainingPipelinesLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI Training Pipelines link.


   .. py:attribute:: name
      :value: 'Vertex AI Training Pipelines'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'pipelines_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/training/training-pipelines?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: VertexAIDatasetLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI Dataset link.


   .. py:attribute:: name
      :value: 'Dataset'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'dataset_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/locations/{region}/datasets/{dataset_id}/analyze?project={project_id}'



   .. py:method:: persist(context, task_instance, dataset_id)
      :staticmethod:



.. py:class:: VertexAIDatasetListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI Datasets Link.


   .. py:attribute:: name
      :value: 'Dataset List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'datasets_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/datasets?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: VertexAIHyperparameterTuningJobListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI HyperparameterTuningJobs Link.


   .. py:attribute:: name
      :value: 'Hyperparameter Tuning Job List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'hyperparameter_tuning_jobs_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/training/hyperparameter-tuning-jobs?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: VertexAIBatchPredictionJobLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI BatchPredictionJob link.


   .. py:attribute:: name
      :value: 'Batch Prediction Job'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'batch_prediction_job_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/locations/{region}/batch-predictions/{batch_prediction_job_id}?project={project_id}'



   .. py:method:: persist(context, task_instance, batch_prediction_job_id)
      :staticmethod:



.. py:class:: VertexAIBatchPredictionJobListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI BatchPredictionJobList link.


   .. py:attribute:: name
      :value: 'Batch Prediction Job List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'batch_prediction_jobs_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/batch-predictions?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: VertexAIEndpointLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI Endpoint link.


   .. py:attribute:: name
      :value: 'Endpoint'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'endpoint_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/locations/{region}/endpoints/{endpoint_id}?project={project_id}'



   .. py:method:: persist(context, task_instance, endpoint_id)
      :staticmethod:



.. py:class:: VertexAIEndpointListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI EndpointList link.


   .. py:attribute:: name
      :value: 'Endpoint List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'endpoints_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/endpoints?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: VertexAIPipelineJobLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI PipelineJob link.


   .. py:attribute:: name
      :value: 'Pipeline Job'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'pipeline_job_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/locations/{region}/pipelines/runs/{pipeline_id}?project={project_id}'



   .. py:method:: persist(context, task_instance, pipeline_id)
      :staticmethod:



.. py:class:: VertexAIPipelineJobListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Vertex AI PipelineJobList link.


   .. py:attribute:: name
      :value: 'Pipeline Job List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'pipeline_job_list_conf'



   .. py:attribute:: format_str
      :value: '/vertex-ai/pipelines/runs?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



